Fix: Menu toggle icon distorted
The sidebar menu toggle icon appears distorted

https://github.com/grislyeye/three-meet/issues/64

--- a/themes/cold-tavern/_sidebar.css
+++ b/themes/cold-tavern/_sidebar.css
@@ -91,7 +91,7 @@ body.sticky .sidebar-toggle {
 }
 
 .sidebar-toggle-button:before {
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 6 Free";
   content: "\f0c9";
   font-size: 20px;
 }
